# fields

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
src/: main.py
src/fields/: __init__.py  core.py
src/utils/: __init__.py  file_reader.py  helpers.py  logger.py  spreadsheet.py  summarize_permit.py
tests/: __init__.py  test_core.py
